[package]
name = "geode_td_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
geode_td_shared = { path = "../shared" }
rand = "0.9"
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
